layout bug fixed(FIND OUT MORE btn)

--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -187,7 +187,7 @@
 
 .slogan-container {
   overflow        : hidden;
-  height          : 25rem;
+  min-height      : 25rem;
   background-color: var(--clr-primary-1);
   text-align      : center;
 
@@ -209,7 +209,7 @@
   }
 
   .slogan-btn {
-    @include button
+    @include button;
   }
 }
 
